[core] use 'wdk' instead of 'ddk' and drop IA64 support
* This means that DDK_DIR/--with-ddkdir has been changed to WDK_DIR/--with-wdkdir
* Also fix precommit version update and AppVeyor builds

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 *.aps
+*.db*
 *.dep
 *.exe
 *.htm
 *.idb
+*.ilk
+*.ipch
 *.la
 *.lib
 *.lo
@@ -13,6 +16,7 @@
 *.ncb
 *.o
 *.obj
+*.opendb
 *.opt
 *.pc
 *.pdb
