--- a/libwdi/.msvc/libwdi_dll.vcxproj.filters
+++ b/libwdi/.msvc/libwdi_dll.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="..\libwdi_i.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\embedder_files.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libwdi.def">
