--- a/libwdi/.msvc/libwdi_static.vcxproj.filters
+++ b/libwdi/.msvc/libwdi_static.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClInclude Include="..\stdfn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\embedder_files.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libusb0.inf.in">
