Back contributing the console application compatible with Visual studio 2013. No User interface

--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -4,7 +4,7 @@
   # Start application in advanced mode (default = false)
   advanced_mode = true
   # Exit application upon successful driver installation (default = false)
-  exit_on_success = false
+  exit_on_success = true
   # Log level (0=debug, 1=info, 2=warning, 3=error)
   log_level = 0
   
@@ -19,7 +19,7 @@
 [driver]  
   # Select the following as the default driver to install:
   # WinUSB = 0, libusb0.sys = 1, libusbK.sys = 2, Custom = 3 (default = WinUSB)
-  default_driver = 2
+  default_driver = 0
   # Extract driver files only, don't install (default = false)
   extract_only = false
   # Set the default destination directory for extraction of the driver files (default = "C:\\usb_driver")
