--- a/examples/.msvc/wdi-simple.vcxproj
+++ b/examples/.msvc/wdi-simple.vcxproj
@@ -182,6 +182,10 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\libwdi\libwdi.h" />
+    <ClInclude Include="..\getopt\getopt.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
