[core] don't continue on .cat signing errors if test signing is disabled
* These will prevent the infamous 'Cancelled by user' reports.
* Also improve PKI error reporting and fix some MinGW warnings.

--- a/configure.ac
+++ b/configure.ac
@@ -65,7 +65,7 @@ case $host in
 	create_import_lib="yes"
 	LIBCONFIG_LIBADD=""
 	LIBCONFIG_CFLAGS=""
-	AM_CFLAGS="-Wshadow"
+	AM_CFLAGS="-Wshadow -Wno-stringop-truncation"
 	AM_LDFLAGS="-Wl,--add-stdcall-alias"
 	;;
 *)
