--- a/.github/workflows/vs2022.yml
+++ b/.github/workflows/vs2022.yml
@@ -29,7 +29,7 @@ env:
 
 jobs:
   VS2022-Build:
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
