[misc] don't use libtool when invoking windres
* When building a shared library, libtool prouces _rc.lo instead of _rc.o => Call windres directly.
* Addresses part of #274.
* Also fix sed's mishandling of CRLFs...

--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,7 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])],
 
 AC_PREREQ([2.71])
 AC_PROG_CC
+AC_CHECK_TOOL(WINDRES, windres, :)
 LT_INIT
 LT_LANG([Windows Resource])
 AC_C_INLINE
