--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,20 +2,18 @@ AM_CPPFLAGS = -I$(top_srcdir)
 
 noinst_PROGRAMS = zadig wdi-simple
 
-pkg_v_rc = $(pkg_v_rc_$(V))
-pkg_v_rc_ = $(pkg_v_rc_$(AM_DEFAULT_VERBOSITY))
-pkg_v_rc_0 = @echo "  RC     $@";
+AM_V_WINDRES_0 = @echo "  RC     $@";$(WINDRES)
+AM_V_WINDRES_1 = $(WINDRES)
+AM_V_WINDRES_  = $(AM_V_WINDRES_$(AM_DEFAULT_VERBOSITY))
+AM_V_WINDRES   = $(AM_V_WINDRES_$(V))
 
-zadig_rc.o: zadig.rc zadig_resource.h
-	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
+%_rc.o: %.rc
+	$(AM_V_WINDRES) $(AM_RCFLAGS) -i $< -o $@
 
 zadig_SOURCES = zadig.c zadig_net.c zadig_parser.c zadig_stdlg.c profile.c
 zadig_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(AM_CFLAGS)
 zadig_LDFLAGS = -mwindows $(AM_LDFLAGS) -static
 zadig_LDADD = zadig_rc.o -L../libwdi/.libs -lwdi -lwininet -luuid -lcomctl32
-
-wdi-simple_rc.o: wdi-simple.rc
-	$(pkg_v_rc)$(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --tag=RC --mode=compile $(RC) $(ARCH_RCFLAGS) -i $< -o $@
 
 wdi_simple_SOURCES = wdi-simple.c
 wdi_simple_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(AM_CFLAGS)
